fixed alignment of share button

--- a/src/components/control-bar/control-bar.module.scss
+++ b/src/components/control-bar/control-bar.module.scss
@@ -12,6 +12,8 @@
 };
 
 .child {
+  display: flex;
+  justify-content: flex-end;
   min-width: 5rem;
   span {
     font-family: 'Source Sans Pro';
